# ProjetoCG

./: README.md
Fase1/: CMakeLists.txt
Fase1/src/Engine/: drawFunctions.cpp  drawFunctions.hpp  engine.cpp
Fase1/src/Generator/: generator.cpp  vertices.cpp  vertices.hpp
Fase1/src/Structs/: structs.cpp  structs.hpp
Fase2/: CMakeLists.txt
Fase2/src/Engine/: drawFunctions.cpp  engine.cpp
Fase2/src/Generator/: vertices.cpp  vertices.hpp
Fase2/src/Structs/: structs.cpp  structs.hpp
Fase3/: CMakeLists.txt
Fase3/src/Engine/: catmullRom.cpp  catmullRom.hpp  drawFunctions.cpp  drawFunctions.hpp  engine.cpp
Fase3/src/Generator/: generator.cpp  vertices.cpp  vertices.hpp
Fase3/src/Matrices/: matrices.cpp  matrices.hpp
Fase3/src/Structs/: structs.cpp  structs.hpp
Fase4/: CMakeLists.txt
Fase4/src/Engine/: drawFunctions.cpp  drawFunctions.hpp  engine.cpp
Fase4/src/Generator/: generator.cpp  vertices.cpp  vertices.hpp
Fase4/src/Structs/: structs.cpp  structs.hpp
